--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="css/own.css">
   </head>
 
 
-  <body class="no-margin-padding container-fluid">
-      <nav class="navbar navbar-default">
+  <body class="container">
+      <nav id="navbar" onclick="yolo()" class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Toja Design</a>
@@ -26,7 +27,8 @@
       </div>
     </nav>
 
-    <div class=" col-md-12">
+    <div class="no-margin-padding col-md-12">
+
       <div class="velky-block no-margin-padding col-md-8">
         <div class="no-margin-padding col-md-12">
             <img class="no-margin-padding vrata" src="vrata.png" alt="Vrata">
@@ -43,25 +45,61 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="no-margin-padding col-md-8">
-          <div class="col-md-12">
-              <img class="" src="stul.png" alt="Motostul">
-          </div>
+
+
+      <div class="no-right-padding col-md-4">
+
+        <div class="maly-block no-margin-padding col-md-12">
           <div class="no-margin-padding col-md-12">
-            <div class="text-center no-margin-padding col-md-6">
+              <img class="stul" src="stul.png" alt="Motostul">
+          </div>
+
+          <div class="no-margin-padding col-md-12">
+            <div class="text-center col-md-12">
               <div>
                 <h2>Motostůl</h2>
               </div>
             </div>
 
-            <div class="text-justify no-margin-padding col-md-6">
+            <div class="text-justify col-md-12">
               <p class="popis">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
             </div>
           </div>
+
         </div>
       </div>
+
+
+      <div class="padding-top no-right-padding col-md-4">
+
+        <div class="maly-block no-margin-padding col-md-12">
+          <div class="no-margin-padding col-md-12">
+              <img class="stul" src="stul.png" alt="Motostul">
+          </div>
+
+          <div class="no-margin-padding col-md-12">
+            <div class="text-center col-md-12">
+              <div>
+                <h2>Motostůl</h2>
+              </div>
+            </div>
+
+            <div class="text-justify col-md-12">
+              <p class="popis">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
+
+
+<script>
+function yolo() {
+  $('#navbar').addClass('clicked');
+}
+</script>
 
   </body>
 </html>
