--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Toja Design</title>
 
+
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -12,17 +15,22 @@
 
     <link rel="stylesheet" href="css/own.css">
   </head>
-
+<header>
+  <nav id="navbar" onclick="roll()" class="navbar navbar-inverse maly-nav">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li class="toja"><a href="#">Toja Design</a></li>
+        <li class="onas"><a href="#">O nás</a></li>
+        <li class="kontakt"><a href="#">Kontakt</a></li>
+      </ul>
+      <ul class="nav navbar-nav onas-text-parent">
+        <li id="onas-text" class="onas-text hidden">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur sagittis hendrerit ante. Suspendisse sagittis ultrices augue. Etiam quis quam. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Vivamus luctus egestas leo. Aliquam erat volutpat.</li>
+      </ul>
+    </div>
+  </nav>
+</header>
   <body class="container">
-    <nav id="navbar" onclick="roll()" class="navbar navbar-inverse maly-nav">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Toja Design</a>
-        </div>
-        <ul class="nav navbar-nav">
-        </ul>
-      </div>
-    </nav>
+
 
     <div class="no-margin-padding col-md-12">
 
@@ -132,7 +140,7 @@
             </div>
             <div class="gallerie">
 
-<span>
+          <span>
             <div class="col-md-1 sipka-div leva">
               <img class="sipka" src="sipka.svg" alt="">
             </div>
@@ -148,7 +156,7 @@
             <div class="col-md-12 text-center">
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla pulvinar eleifend sem. Etiam quis quam. Nulla non lectus sed nisl molestie malesuada. </p>
             </div>
-</span>
+          </span>
                 </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -163,12 +171,19 @@
 
 
 <script>
+$(document).ready(function() {
+    $("#onas-text").hide().removeClass('hidden');
+
+
+});
 
 function roll(){
   if ( $('#navbar').hasClass('maly-nav')) {
     $('#navbar').addClass('velky-nav').removeClass('maly-nav');
+    $('#onas-text').slideDown(300);
   }else {
     $('#navbar').addClass('maly-nav').removeClass('velky-nav');
+        $('#onas-text').slideUp(200);
   }
 }
 </script>
